After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760782 - History lost when restoring recently closed tabs
History lost when restoring recently closed tabs
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: History
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on: 119432 695966
Blocks:
 
 
Reported: 2016-01-18 13:04 UTC by Carlos Garcia Campos
Modified: 2016-01-20 09:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ephy-session: restore session state when restoring recently closed tabs (3.00 KB, patch)
2016-01-18 13:06 UTC, Carlos Garcia Campos
committed Details | Review

Description Carlos Garcia Campos 2016-01-18 13:04:55 UTC
Bring this back now that we have API to save and restores a web view session.
Comment 1 Carlos Garcia Campos 2016-01-18 13:06:27 UTC
Created attachment 319259 [details] [review]
ephy-session: restore session state when restoring recently closed tabs
Comment 2 Michael Catanzaro 2016-01-18 16:03:56 UTC
Review of attachment 319259 [details] [review]:

OK
Comment 3 Carlos Garcia Campos 2016-01-20 09:55:14 UTC
Pushed to git master