ephy-session: restore session state when restoring recently closed tabs

This feature was lost with the port to WebKit2, but it's now back and
improved, since now nt only the back list is restored, but the whole
history navigation information and the scroll position.

https://bugzilla.gnome.org/show_bug.cgi?id=760782